<resources>
    <string name="app_name">Path Finder Puzzle</string>
    <string name="title_activity_solution">Find My Path</string>
    <string name="large_text">
        PathFinder\n
      This App is created by SoftCareTech…
      \nA product of Raphael Raphael Products.
      \nOwned by Aondoakula Raphael Gbenge
      \n Email @ raphaelraymondproduct@gmail.com
      \n\n\n\n
      Note about the App
\n\n1.	Introduction
\nPathFinder is a game and a problem-solving tool for TSP (Travelling salesman problem).
\nShortest Path Game will provide you with some points (let say stations) for you to find the shortest path to move around the points(to all points). Imagine a problem of vaccines to be distributed at various airports and back to the main station, with aim of trying to minimize the cost of transportation. Tip: when playing the game aim to form a cyclic path.
\nFind My Path (Solving tool for TSP) you will provide either the locations or distances between the locations (or cost) and the App will give you the shortest path to follow. If have an image of the map of locations you can easily load the map (snap or gallery) and point at the desired location to which want to find the shortest path.
\nChoosing input method:
\n•	Choose a location by typing if you have the coordinate and the distance (cost) equals the displacement (or distance by going by road is equal going by air) --- location important, graph important.
\n•	Choose a location by loading the image when you have the map image with the locations. Note locations generated are only equivalent to the actual location.
\n•	Choose distance when the distances or costs are known and coordinate are unknown.  Cost is important, the graph is not important.

\n\n2.	Operation (User guide)
\nA.	Playing the game.
\nFirstly open the app, if don’t like the sound disable it at the top right side icon. Press Shortest Path (game model) Select new for a game in the popup as a new user and the initial level will be started. If you are not a new user pressing new will take to place where you can start from a level that you have unlocked.  Press resume to continue from the previously played game. When a game is over you can only start new but have the chance of choosing a higher level than initial but the scores will not be gained.
\nAlphabets are indicating various cities. Click on city directly to indicate the interest in; starting or moving to it. The one clicked on will have a different circle colour round it and it moves from lower keys to top keys or left keys to right keys in the key list. Note the current location will always have its distinct colour apart from already visited.  Click the next destination and a path with being drawn. Click or already visited cities to undo (that means attempting to select an already selected city will cause it to deselect).  Continue to your desire points until you exhaust the points. After exhausting the points you will prompt with a win or lose; when losing up to three times, the game over will be replaced with loose. When you win, you can go to next or you can return to see your path before moving. When you lose, you try again or return like in the win.  Click the play button if you wish to resume after pressing return in lose, win or game over.
\nMenu (menu icon) have the preference setting about sound, keyboard, refreshing point on try again, and using timing. It also contains the highest score ever played.
\nSharing a Game Stage: You can share your highest played game or current game to another person by press share in the Lose, game over, resume the game. The shared value will be in form of text. Once the text is received from the next user, he will highlight and share it with the game as it appeared. For example, using the Facebook web.

\n\nB.	Solving a TSP problem
Open the App and click Find My Path for the solution model will be visible to work on. Select your input method by click on the current input method which now helps you to toggle between “add by location”, “add by loading map” and “add by distance”. After changing the desire input method click on the plus icon (top right) to add. You can always clear all by clicking on the clear icon (top left). After adding the problem click on the bottom right icon to get the shortest path. ). Clear data to start afresh problem when adding a new problem.
\nAdding by image is not incremental, which means when you add an image you are required to finish adding all the locations before clicking the finish icon (bottom right). Also, note you load an image by press the map icon (bottom left first). Now toggle add switch (bottom left, second icon) to enable adding points. You can click on the desired position on the loaded image to add points. If you made a mistake click on the third icon to remove the previous point. When you are done adding the point you can then press the bottom right icon as the finish or fourth icon from the left, it will take you back to the main TSP solution with location extracted. Note once you click add (plus icon) when “add by Loading map” is active the exiting data will be discarded.
\nAdding Location select it to be active the click the add icon. Again click add icon (bottom left first). The next view will require you to put the latitude and longitude of the location and the location name. Click add button when done inputting the location. Again click add if you have another point. Once done adding location click the check icon (bottom right). It will take you back to the main where you can click on the right bottom icon to find the shortest path.
\nAdding by distances or cost, select add by distance. Next, click add icon and type the only city name in the next edit text and click finish when done just like in add by location. The next will require you to add the city name and its distance to the first.  The third will require you to add the city name and its distance to the first and second. Repeatedly you add all the cities and their distances as the number of distances increment.
\nNote a problem must have up to three cities at minimum.
  </string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_open">Open</string>
    <string name="dyn">Dynamic</string>
    <string name="knn">K-Nearest Neighbour</string>
    <string name="gen">Genetic</string>
    <string name="auto">Auto(from above)</string>
    <string name="cancel">Cancel</string>
    <string name="select_alg">Select Algorithm</string>
    <string name="title_activity_addL">Add Locations</string>
    <string name="addByDistances">Add by Distances</string>
    <string name="addByLoadingMap">Add by Loading Map</string>
    <string name="addByLocation">Add by Location</string>
    <string name="select_input_method">Select Input Method</string>
    <string name="empty_fields">Empty fields</string>
    <string name="latitude">"Latitude   </string>
    <string name="longitude">Longitude </string>
    <string name="name_is_empty">Name is empty</string>
    <string name="okay">Okay</string>
    <string name="empty">"Empty "</string>
    <string name="not_a_number">Not a number</string>
    <string name="win">Win</string>
    <string name="next">Next</string>
    <string name="game_over">Game Over</string>
    <string name="new_">New</string>
    <string name="welcome">Welcome</string>
    <string name="resume">Resume</string>
    <string name="shortest_path">"Shortest path "</string>
    <string name="Level"> Level  </string>
    <string name="finished">Finished</string>
    <string name="cities_small">Cities too small to be a program</string>
    <string name="un_init">Unable to initialised, add distances or locations</string>
    <string name="cities_not_added">Cities are not added</string>
    <string name="input_empty_start_problem">Inputs empty start a new problem</string>
    <string name="error"> Error occurred </string>
    <string name="city_name">City Name</string>
    <string name="go">Go</string>
    <string name="menu">menu</string>
    <string name="level">Level</string>
    <string name="time">Time</string>
    <string name="play">Play</string>
    <string name="zoom_out">zoom out</string>
    <string name="zoom_in">zoom in</string>
    <string name="scores">Scores</string>
    <string name="donate">Donate</string>
    <string name="find_my_path">Find My Path</string>
    <string name="play_game">Play Game</string>
    <string name="solution_model">Solution model</string>
    <string name="sound_toggle">Sound toggle</string>
    <string name="total_distances_cost">Total distances(cost)</string>
    <string name="locations">Locations</string>
    <string name="matrix_representation_of_distances">Matrix representation of distances</string>
    <string name="visualised">Visualised</string>
    <string name="refresh">refresh</string>
    <string name="add">add</string>
    <string name="solve">solve</string>
    <string name="city">City</string>
    <string name="empty_field">empty field</string>
    <string name="close">Close</string>
    <string name="you_lose">You lose</string>
    <string name="back">Back</string>
    <string name="refresh_points_always">Refresh points always</string>
    <string name="actions_sounds">Actions Sounds</string>
    <string name="keys">Keys</string>
    <string name="background_sound">Background Sound</string>
    <string name="highest_score">Highest score</string>
    <string name="timing">Timing</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="ad_photo">Add Photo!</string>
    <string name="permission_msg">Oh you have not accepted permission for the App to access your storage</string>
    <string name="accept_now">Accept now</string>
    <string name="permission_not_set">Permission not set</string>
    <string name="level_lock">This level is locked</string>
    <string name="load_map">Load map</string>
    <string name="undo">undo</string>
    <string name="ad_some_points">"Add some points "</string>
    <string name="saveByLocation">Save locations</string>
    <string name="saveByDistances">save distances</string>
    <string name="openByLocation">Open Tsp Locations</string>
    <string name="openByDistances">Open Tsp distances</string>
    <string name="b_played">Best played so far</string>
    <string name="share">Share</string>
    <string name="current_game">Current Game</string>
    <string name="start_from_level">Start From Level</string>
    <string name="start_game">Start Game</string>
    <string name="help">Help</string>
    <string name="edit">"edit "</string>
    <string name="delete">delete</string>
    <string name="highestStageGame">Highest stage game</string>
    <string name="currentStageGame">Current stage Game</string>
    <string name="unable_to_share">Unable to share. Play the game up to level 5 before sharing your scores</string>
    <string name="warn_over">To continue using the app, Please update</string>
    <string name="update_now">Update Now</string>
    <string name="warn_msg">Update app or you won\'t be able to use it after using the app </string>
    <string name="time_s_">time(s)</string>
    <string name="sound_enable">Sound enable</string>
    <string name="sound_disable">Sound disable</string>
    <string name="milli_sec_">  ms </string>
    <string name="more_action_on">More action on</string>
    <string name="playingSharedGame">Playing Shared game</string>
    <string name="add_city">add city</string>
    <string name="finish">Finish</string>
    <string name="load__snap_map">Load/snap map</string>
    <string name="update">Update</string>
    <string name="intro_t">Welcome</string>
    <string name="intro_come_back_msg">You can always come back to this help by pressing help on the main screen of this App</string>
    <string name="intro_not_disturb_msg">Don\'t show help </string>
</resources>