<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Pop"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        style="@style/PopTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView"
        style="@style/PopText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/return_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="wrap_content_constrained"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/msg"
            style="@style/PopText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warn_msg"
            android:textSize="24sp" />
    </ScrollView>

    <Button
        android:id="@+id/return_btn"
        style="@style/PopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/update"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/update"
        style="@style/PopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_now"
        app:layout_constraintBottom_toBottomOf="@+id/return_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/return_btn" />

    <TextView
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        style="@style/PopButton"
        android:text="@string/help"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toStartOf="@+id/title"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>