<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:isScrollContainer="true"
    app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <softcare.gui.PlotTSP
                android:id="@+id/plotTSP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/medium_dp"
                android:isScrollContainer="true"
                app:labelColor="@color/green"
                app:zoomValue="100" />
        </HorizontalScrollView>
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="hello text view " />
</LinearLayout>
    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@color/white"
            android:dividerPadding="4dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/close"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/zoom_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/zoom_out"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/zoom_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/zoom_in"
                style="?android:attr/buttonBarButtonStyle" />


        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>